# midi-cpp

./: .gitignore  CMakeLists.txt  README.md  ThirdPartyNotices.txt
ThirdPartyNotices/: README.md  googletest.txt
cmake/: BMMidiDefaults.cmake  BMMidiDeps.cmake  BMMidiTargets.cmake
dependencies/: CMakeLists.txt
src/: CMakeLists.txt
src/bmmidi/: CMakeLists.txt  bitops.hpp  bitops_test.cpp  bmmidi.hpp  channel.hpp  channel_test.cpp  control.hpp  control_test.cpp  cpp_features.hpp  data_value.hpp  data_value_test.cpp  key_number.hpp  key_number_test.cpp  msg.hpp  msg_reference.hpp  msg_reference_test.cpp  msg_test.cpp  pitch_bend.hpp  pitch_bend_test.cpp  preset_number.hpp  preset_number_test.cpp  status.hpp  status_test.cpp  sysex.cpp  sysex.hpp  sysex_test.cpp  time.hpp  time_test.cpp  timecode.cpp  timecode.hpp  timecode_test.cpp  timed.hpp  timed_test.cpp
